Update author name in package.json

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.js"
   },
-  "author": "Ajit Verma @ CodeFlex",
+  "author": "Harsh Kumar",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
